Lista la maqueta del sitio con el theme nuevo.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
 <footer class="footer">
 
 	<div class="footer__copyright">
-		<span>© {{ 'now' | date: "%Y" }} {{ site.data.settings.basic_settings.site_title }}</span>
-		<a href="https://jekyllthemes.io" target="_blank">Jekyll Themes</a>
+                  Este sitio web está licenciado bajo una <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.es">Licencia Creative Commons Attribución-CompartirIgual 4.0 Internacional</a>.
 	</div>
-
 </footer>
